# CG

./: README.md  design.py
lab1/: 1.ui  design.py  lab.py  lab1.py  lab_1_almost.py  lab_1_super_almost.py  lab_1_super_almost_fix.py
lab10/: design.py  lab10.py  ssslab10.py  untitled.ui
lab10/de/: 10lab.py  design.py  design.ui
lab2/: CMakeLists.txt  CMakeLists.txt.user.5e48cf3  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_копия.cpp
lab3/: design.py  lab3.py  lab3.ui
lab4/: 0lab4.py  design.py  lab4.py  lab4.ui  lab4comments.py  untitled.ui
lab4/d/: 4LabMain (2).py
lab5/: da.py  lab5.py  lab5.ui  window.ui
lab5/CG4/: 0mainwindow_копия.cpp  CMakeLists.txt  edge.cpp  edge.h  lists.cpp  lists.h  mainwindow — копия.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_копия.cpp  mainwindow_копия_пояснения.cpp
lab5/lab5_CG/: CMakeLists.txt  edge.cpp  edge.h  lists.cpp  lists.h  mainwindow.cpp  mainwindow.h
lab6/: design.py  design1.py  lab5.py  mainwindow.ui  Сусликов 6 лр.docx
lab7/: 7lab.py  designn.py  lab7.py  lab7KUR.py
lab8/: lab8.py  mainwindow.ui
lab8/d/: 8lab.py  Sklifasovskiy_8.docx
lab9/: 9lab (1).py  9lab (2).py
